# yuanmahui

./: .gitignore  README.md
python/: requirements.txt  t.py
python/aio/: aiohttp_cli.py  aiohttp_client.py  aiohttp_completed_client.py  aiohttp_gather_client.py  aiohttp_queue_client.py  aiohttp_server.py  areq.py  asyncq.py  chained.py  countasync.py  event_loop_exit.py  h11_server.py  rand.py  request_client.py  sync_call_async.py  task.py  tcp_server.py  tcp_server_1.py  tcp_server_proto.py  timeout_server.py
python/ch1-redis/: test_sample.py
python/ch10-mako/: sample.py  source.txt
python/ch11-blinker/: sample.py
python/ch12-docker-py/: sample.py
python/ch16-17-sqlalchemy/: sample.py
python/ch18-rpc/: sample.py
python/ch19-pypy/: a.out  mysum.js  mysum.lua  t.c  t1.py  t10.py  t11.py  t12.py  t2.py  t3.py  t4.py  t5.py  t6.py  t7.py  t8.py  t9.py
python/ch2-requests/: test_sample.py
python/ch23-celery/vine-5.0.0/: .bumpversion.cfg  .cookiecutterrc  .coveragerc  .gitignore  .travis.yml  AUTHORS  Changelog  Makefile  README.rst  README.zh-cn.md  appveyor.yml  setup.cfg  setup.py  tox.ini
python/ch23-celery/vine-5.0.0/docs/: conf.py
python/ch23-celery/vine-5.0.0/docs/includes/: introduction.txt
python/ch23-celery/vine-5.0.0/docs/reference/: index.rst
python/ch23-celery/vine-5.0.0/requirements/: pkgutils.txt
python/ch23-celery/vine-5.0.0/t/unit/: conftest.py  test_abstract.py  test_funtools.py  test_promises.py  test_synchronization.py
python/ch23-celery/vine-5.0.0/vine/: __init__.py  abstract.py  promises.py  synchronization.py
(+122 files in other folders)
